tests/integration/reject/default_param_errors.rsg
// TEST: compile_error

// === too few args with defaults ===
// EXPECT-ERROR: expected at least

fn add(a: i32, b: i32, c: i32 = 0) -> i32 {
    a + b + c
}

fn main() {
    add(1)
}

// === too many args with defaults ===
// EXPECT-ERROR: expected at most

fn inc(x: i32, step: i32 = 1) -> i32 {
    x + step
}

fn main() {
    inc(1, 2, 3)
}

// === default type mismatch ===
// EXPECT-ERROR: type mismatch

fn typed(x: i32, y: i32 = 0) -> i32 {
    x + y
}

fn main() {
    typed(1, "hello")
}
